Fix pom and code issues

--- a/VideoEncoding/EncodingWithMESCustomPreset/pom.xml
+++ b/VideoEncoding/EncodingWithMESCustomPreset/pom.xml
@@ -9,6 +9,11 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.12.5</version>
+    </dependency>
+    <dependency>
       <groupId>com.googlecode.json-simple</groupId>
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
@@ -40,9 +45,8 @@
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
-      <artifactId>azure-sdk-bom</artifactId>
-      <version>1.0.3</version>
-      <type>pom</type>
+      <artifactId>azure-storage-blob</artifactId>
+      <version>12.11.1</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -53,11 +57,6 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.5</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.10.0.pr1</version>
     </dependency>
   </dependencies>
   <build>
