--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-# Compiled class file
+# Compiled files and folders
 *.class
+**/target/
+**/Output/
 
 # Log file
 *.log
+logs/
 
 # BlueJ files
 *.ctxt
@@ -21,3 +24,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# editor files
+.idea/
+**/.DS_Store
